[gd_scene load_steps=16 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Top Down Shooter Assets/music/theme-4.wav" type="AudioStream" id=4]
[ext_resource path="res://Top Down Shooter Assets/background/tileset.png" type="Texture" id=5]
[ext_resource path="res://target.tscn" type="PackedScene" id=6]
[ext_resource path="res://Top Down Shooter Assets/sounds/explosion-3.wav" type="AudioStream" id=7]
[ext_resource path="res://enemyBullet.tscn" type="PackedScene" id=8]
[ext_resource path="res://hud.tscn" type="PackedScene" id=9]
[ext_resource path="res://player_death_effect.tscn" type="PackedScene" id=10]
[ext_resource path="res://Top Down Shooter Assets/music/theme-2.ogg" type="AudioStream" id=11]
[ext_resource path="res://time_out_effect.tscn" type="PackedScene" id=12]
[ext_resource path="res://Top Down Shooter Assets/sounds/flame-thrower.wav" type="AudioStream" id=13]

[sub_resource type="TileSet" id=1]
0/name = "tileset.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 32, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 224, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tileset.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 224, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tileset.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 160, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tileset.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 0, 96, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tileset.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 128, 128, 32 )
6/tile_mode = 1
6/autotile/bitmask_mode = 1
6/autotile/bitmask_flags = [ Vector2( 0, 0 ), 146, Vector2( 0, 1 ), 16, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 186, Vector2( 2, 0 ), 176, Vector2( 2, 1 ), 50, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 26, Vector2( 4, 0 ), 184, Vector2( 4, 1 ), 154, Vector2( 5, 0 ), 58, Vector2( 5, 1 ), 178, Vector2( 6, 0 ), 24, Vector2( 6, 1 ), 48, Vector2( 7, 0 ), 144, Vector2( 7, 1 ), 18 ]
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 16, 16 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tileset.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 144, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tileset.png 8"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 64, 128, 32 )
8/tile_mode = 1
8/autotile/bitmask_mode = 1
8/autotile/bitmask_flags = [ Vector2( 0, 0 ), 146, Vector2( 0, 1 ), 16, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 186, Vector2( 2, 0 ), 176, Vector2( 2, 1 ), 50, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 26, Vector2( 4, 0 ), 184, Vector2( 4, 1 ), 154, Vector2( 5, 0 ), 58, Vector2( 5, 1 ), 178, Vector2( 6, 0 ), 24, Vector2( 6, 1 ), 48, Vector2( 7, 0 ), 144, Vector2( 7, 1 ), 18 ]
8/autotile/icon_coordinate = Vector2( 0, 0 )
8/autotile/tile_size = Vector2( 16, 16 )
8/autotile/spacing = 0
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 464, 0, 0, 0, 0, 0, 464, 360, 0, 0, 0, 0, 0, 360, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
time = 20
Bullet = ExtResource( 3 )
Target = ExtResource( 6 )
EnemyBullet = ExtResource( 8 )
PlayerDeathEffect = ExtResource( 10 )
TimeOutEffect = ExtResource( 12 )

[node name="GameTimer" type="Timer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.9, 0.94 )
tile_set = SubResource( 1 )
cell_custom_transform = Transform2D( 64, 64, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 65536, 4, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 4, 0, 131072, 4, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 4, 0, 196608, 4, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 4, 0, 262144, 4, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 4, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 224 )

[node name="TargetPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="TargetSpawnPoint" type="PathFollow2D" parent="TargetPath"]

[node name="SpawnTargetTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="SpawnEnemyBulletTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ScoreTimer" type="Timer" parent="."]

[node name="TargetHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -11.107

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="TitleScreenTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.291

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -22.214

[node name="TimeOutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="fired_gun" from="Player" to="." method="_on_Player_fired_gun"]
[connection signal="timeout" from="SpawnTargetTimer" to="." method="_on_SpawnTargetTimer_timeout"]
[connection signal="timeout" from="SpawnEnemyBulletTimer" to="." method="_on_SpawnEnemyBulletTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="game_started" from="HUD" to="." method="start_game"]
[connection signal="title_screen_shown" from="HUD" to="." method="_on_HUD_title_screen_shown"]
[connection signal="timeout" from="TitleScreenTimer" to="." method="_on_TitleScreenTimer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
